--- a/frontend/account/jade/account.jade
+++ b/frontend/account/jade/account.jade
@@ -1,15 +1,54 @@
 account-menu
 div(ng-if="!vm.state.project")
 	#account(layout="row")
-		account-info(username="vm.username", first-name="vm.firstName", last-name="vm.lastName", email="vm.email", item-to-show="vm.itemToShow")
+		account-info(
+		username="vm.username"
+		first-name="vm.firstName"
+		last-name="vm.lastName"
+		email="vm.email"
+		item-to-show="vm.itemToShow")
 
 		#accountItem(ng-switch="vm.itemToShow")
-			account-projects(ng-switch-when="repos", account="vm.account", accounts="vm.accounts", show-page="vm.showItem(page, callingPage)", quota="vm.quota")
-			account-profile(ng-switch-when="profile", username="vm.username", first-name="vm.firstName", last-name="vm.lastName", email="vm.email")
-			account-billing(ng-switch-when="billing", account="vm.account", billing-address="vm.billingAddress", quota="vm.quota", billings="vm.billings", licenses="vm.licenses")
-			account-licenses(ng-switch-when="licenses", account="vm.account", show-page="vm.showPage(page, callingPage)")
-			account-team(ng-switch-when="team", account="vm.account", show-page="vm.showPage(page, callingPage)")
+			account-projects(
+			ng-switch-when="repos"
+			account="vm.account"
+			accounts="vm.accounts"
+			show-page="vm.showItem(page, callingPage)"
+			quota="vm.quota")
+
+			account-profile(
+			ng-switch-when="profile"
+			username="vm.username"
+			first-name="vm.firstName"
+			last-name="vm.lastName"
+			email="vm.email")
+
+			account-billing(
+			ng-switch-when="billing"
+			account="vm.account"
+			billing-address="vm.billingAddress"
+			quota="vm.quota"
+			billings="vm.billings"
+			subscriptions="vm.subscriptions"
+			plans="vm.plans")
+
+			account-licenses(
+			ng-switch-when="licenses"
+			account="vm.account"
+			show-page="vm.showPage(page, callingPage)"
+			subscriptions="vm.subscriptions")
+
+			account-team(
+			ng-switch-when="team"
+			account="vm.account"
+			show-page="vm.showPage(page, callingPage)"
+			subscriptions="vm.subscriptions")
 
 div(ng-if="vm.state.project")
-	project(account="vm.state.account" project="vm.state.project" branch="vm.state.branch" revision="vm.state.revision" state="vm.state")
+	project(
+	account="vm.state.account"
+	project="vm.state.project"
+	branch="vm.state.branch"
+	revision="vm.state.revision"
+	state="vm.state")
 accou
