--- a/frontend/account/jade/accountBilling.jade
+++ b/frontend/account/jade/accountBilling.jade
@@ -27,14 +27,14 @@
 				div(layout="row")
 					md-input-container(flex)
 						label Postal code
-						input(type="text", ng-model="vm.newBillingAddress.postalCode", ng-disabled="vm.billingDetailsDisabled")
+						input(type="text", ng-model="vm.newBillingAddress.postalCode")
 					md-input-container(flex)
 						label Country
-						md-select(ng-model="vm.newBillingAddress.countryCode", ng-disabled="vm.billingDetailsDisabled")
+						md-select(ng-model="vm.newBillingAddress.countryCode")
 							md-option(ng-repeat="country in vm.countries", value="{{country.code}}") {{country.name}}
 					md-input-container(flex)
 						label VAT number (optional)
-						input(type="text", ng-model="vm.newBillingAddress.vat", ng-disabled="vm.billingDetailsDisabled")
+						input(type="text", ng-model="vm.newBillingAddress.vat")
 				p#accountBillingAddressInfo Postal code and country are required. Changing your billing information could affect your applicable tax rate.
 
 			.accountBillingSave
