--- a/frontend/account/jade/accountBilling.jade
+++ b/frontend/account/jade/accountBilling.jade
@@ -4,67 +4,89 @@
 			.md-toolbar-tools
 				h2 Billing
 
-		.userContent
-			// Subscription
-			h1.md-title Subscription
-			div(layout="row")
-				md-input-container(flex)
-					label Quota used (Gb)
-					input(type="text", value="{{vm.quota.spaceUsed | bToGb}}", ng-disabled="true")
-				md-input-container(flex)
-					label Quota available (Gb)
-					input(type="text", value="{{vm.quota.spaceLimit | bToGb}}", ng-disabled="true")
+		md-tabs(md-dynamic-height, md-border-bottom)
+			md-tab(label="Subscription")
+				.userContent#accountBillingSubscription
+					div(layout="row")
+						md-input-container(flex)
+							label Licenses
+							input(type="number", ng-model="vm.numNewLicenses", min="0")
+						md-input-container(flex)
+							label Payment (£ / month)
+							input(type="text", value="{{vm.priceLicenses}}", ng-disabled="true")
+						md-input-container(flex)
+							label Quota used (Gb)
+							input(type="text", value="{{vm.quota.spaceUsed | bToGb}}", ng-disabled="true")
+						md-input-container(flex)
+							label Quota available (Gb)
+							input(type="text", value="{{vm.quota.spaceLimit | bToGb}}", ng-disabled="true")
 
-			div(layout="row")
-				md-input-container(flex)
-					label Licenses
-					input(type="number", ng-model="vm.numNewLicenses", min="0")
-				md-input-container(flex)
-					label Payment (£ / month)
-					input(type="text", value="{{vm.priceLicenses}}", ng-disabled="true")
+					div(layout="row")
+						md-input-container(flex)
+							label First Name
+							input(type="text", ng-model="vm.newBillingAddress.firstName", required)
+						md-input-container(flex)
+							label Last Name
+							input(type="text", ng-model="vm.newBillingAddress.lastName", required)
 
-			div(layout="column")
-				div(layout="row")
-					md-input-container(flex)
-						label Postal code
-						input(type="text", ng-model="vm.newBillingAddress.postalCode")
-					md-input-container(flex)
-						label Country
-						md-select(ng-model="vm.newBillingAddress.countryCode")
-							md-option(ng-repeat="country in vm.countries", value="{{country.code}}") {{country.name}}
-					md-input-container(flex)
-						label VAT number (optional)
-						input(type="text", ng-model="vm.newBillingAddress.vat")
-				p#accountBillingAddressInfo Postal code and country are required. Changing your billing information could affect your applicable tax rate.
+					div(layout="column", flex)
+						div(layout="row", flex, layout-align="start start")
+							div(layout="column", flex)
+								md-input-container(flex)
+									label Address
+									input(type="text", ng-model="vm.newBillingAddress.line1", required)
+								md-input-container(flex)
+									label Address 2
+									input(type="text", ng-model="vm.newBillingAddress.line2")
+								md-input-container(flex)
+									label Address 3
+									input(type="text", ng-model="vm.newBillingAddress.line3")
+								md-input-container(flex)
+									label Company Name
+									input(type="text", ng-model="vm.newBillingAddress.companyName")
 
-			.accountBillingSave
-				div(layout="row", layout-align="start")
-					md-button.md-raised.md-accent(ng-disabled="vm.saveDisabled", ng-click="vm.changeSubscription()", aria-label="Save")
-						img(src="/public/images/pp-logo-100px.png")
-				md-divider
+							div(layout="column", flex)
+								md-input-container(flex)
+									label Postal code
+									input(type="text", ng-model="vm.newBillingAddress.postalCode", required)
+								md-input-container(flex)
+									label City
+									input(type="text", ng-model="vm.newBillingAddress.city", required)
+								md-input-container(flex)
+									label Country
+									md-select(ng-model="vm.newBillingAddress.countryCode", required)
+										md-option(ng-repeat="country in vm.countries", value="{{country.code}}") {{country.name}}
+								md-input-container(flex)
+									label VAT Number (optional)
+									input(type="text", ng-model="vm.newBillingAddress.vat")
 
-			// Billing History
-			h1.md-title Billing history
-			md-content#accountBillingHistory
-				section
-					md-subheader
+					.accountBillingSave
 						div(layout="row", layout-align="start")
-							label(flex="20") Date
-							label(flex="20") Id
-							label(flex="20") Payment Method
-							label(flex="20") Amount (£)
+							md-button.md-raised.md-accent(ng-disabled="vm.saveDisabled", ng-click="vm.changeSubscription()", aria-label="Save") Update
+							img(src="/public/images/pp-logo-100px.png")
 
-				#accountBillingHistoryContainer
-					.accountBillingHistoryListItem(layout="row", layout-align="start start", ng-repeat="billing in vm.billings")
-						md-input-container(flex="20")
-							input(type="text", value="{{billing.createdAt | date:'dd-MM-yyyy'}}", ng-disabled="true", aria-label="date")
-						md-input-container(flex="20")
-							input(type="text", value="{{billing.billingAgreementId}}", ng-disabled="true", aria-label="id")
-						md-input-container(flex="20")
-							input(type="text", value="{{billing.gateway}}", ng-disabled="true", aria-label="paymentMethod")
-						md-input-container(flex="20")
-							input(type="text", value="{{billing.amount}}", ng-disabled="true", aria-label="amount")
-						md-button.md-icon-button.md-accent(aria-label="Download", ng-click="vm.downloadBilling($index)")
-							md-icon.angular-material-icons cloud_download
+					p#accountBillingAddressInfo Changing your billing information could affect your applicable tax rate.
 
 
+			md-tab(label="History")
+				.userContent#accountBillingHistory
+					section
+						md-subheader
+							div(layout="row", layout-align="start")
+								label(flex="20") Date
+								label(flex="25") Id
+								label(flex="25") Payment Method
+								label(flex="20") Amount (£)
+
+					div
+						.accountBillingHistoryListItem(layout="row", layout-align="start start", ng-repeat="billing in vm.billings")
+							md-input-container(flex="20")
+								input(type="text", value="{{billing.createdAt | date:'dd-MM-yyyy'}}", ng-disabled="true", aria-label="date")
+							md-input-container(flex="25")
+								input(type="text", value="{{billing.billingAgreementId}}", ng-disabled="true", aria-label="id")
+							md-input-container(flex="25")
+								input(type="text", value="{{billing.gateway}}", ng-disabled="true", aria-label="paymentMethod")
+							md-input-container(flex="20")
+								input(type="text", value="{{billing.amount}}", ng-disabled="true", aria-label="amount")
+							md-button.md-icon-button.md-accent(aria-label="Download", ng-click="vm.downloadBilling($index)", flex="none")
+								md-icon.angular-material-icons cloud_download
