--- a/frontend/termsAndConditions/jade/termsAndConditionsText.jade
+++ b/frontend/termsAndConditions/jade/termsAndConditionsText.jade
@@ -417,12 +417,8 @@ ol
 					a(name='_Ref370918798')
 					|  If you cease being a User for any reason you must immediately cease using the Service. You acknowledge that, although we will aim to preserve your Submitted Content for a month after the date on which the Subscription ends, we cannot guarantee it. Therefore we advise that any Submitted Content required after the Subscription ceases is exported prior to that date. We reserve the right to delete Submitted Content permanently one month after your Subscription ends. If you are a Collaborator, you will not be able to access content submitted by any Users whose Subscription has ceased.
 	li
-		p
-			span(style="font-family: 'Times New Roman', serif;")
-				span(style='font-size: medium;')
-					strong
-						span(style='font-family: Verdana, sans-serif;')
-							span(style='font-size: small;') Changes to these Terms of Use, the Service and the Service
+		p.level-2-number
+			strong Changes to these Terms of Use, the Service and the Service
 		ol
 			li
 				p.level-2-number
