ISSUE #227 - Added a few more enter key=save, added more fields to billing

--- a/frontend/account/jade/account.jade
+++ b/frontend/account/jade/account.jade
@@ -30,7 +30,9 @@ div(ng-if="!vm.state.project")
 			quota="vm.quota"
 			billings="vm.billings"
 			subscriptions="vm.subscriptions"
-			plans="vm.plans")
+			plans="vm.plans"
+			first-name="vm.firstName"
+			last-name="vm.lastName")
 
 			account-licenses(
 			ng-switch-when="licenses"
