--- a/frontend/account/jade/accountLicenses.jade
+++ b/frontend/account/jade/accountLicenses.jade
@@ -19,7 +19,12 @@
 							p Assign a license
 							md-input-container
 								label Username
-								input(type="text", ng-model="vm.newLicenseAssignee", tdr-focus="true", ng-disabled="vm.allLicensesAssigned")
+								input(
+								type="text"
+								ng-model="vm.newLicenseAssignee"
+								tdr-focus="true"
+								ng-disabled="vm.allLicensesAssigned"
+								ng-keypress="vm.assignLicense($event)")
 						div(layout="row")
 							md-button.md-raised.md-accent(ng-click="vm.assignLicense()", ng-disabled="vm.addDisabled") Assign
 							p {{vm.addMessage}}
