--- a/frontend/signUp/jade/signUpForm.jade
+++ b/frontend/signUp/jade/signUpForm.jade
@@ -17,7 +17,7 @@ form#signUpForm
 		md-checkbox.md-accent(ng-model="vm.newUser.tcAgreed" aria-label="Terms and conditions Checkbox")
 		div(layout="row", layout-align="start center")
 			p I agree to the
-			a(href="", ng-click="vm.showTC()") Terms and Conditions
+			a(href="", ng-click="vm.showPage('termsAndConditions')") Terms and Conditions
 	#loginCaptcha(vc-recaptcha, key="vm.captchaKey", ng-model="vm.reCaptchaResponse", ng-if="vm.useReCapthca")
 	div(layout="row", layout-align="start center")
 		md-button.md-accent.md-raised(ng-click="vm.register()", ng-disabled="vm.registering", flex="none") {{vm.buttonLabel}}
