ISSUE #227 - Enabled deleting projects

--- a/frontend/account/jade/deleteProjectDialog.jade
+++ b/frontend/account/jade/deleteProjectDialog.jade
@@ -8,9 +8,10 @@ md-dialog.deleteProjectDialog(aria-label="Delete project")
 	md-content(layout-margin)
 		div(layout="column", layout-align="start")
 			div(layout="row")
-				p Do you really want to delete project
-				p#deleteProjectName {{vm.projectToDelete.name}}
-				p ?
+				p
+					| Do you really want to delete project
+					=" "
+					span#deleteProjectName {{vm.projectToDelete.name}} ?
 			md-input-container
 				md-button.md-accent(ng-click="vm.deleteProject()") Yes
 				md-button.md-raised.md-accent(ng-click="vm.closeDialog()") No
