--- a/frontend/account/jade/paypalDialog.jade
+++ b/frontend/account/jade/paypalDialog.jade
@@ -9,8 +9,4 @@ md-dialog#paypalDialog(aria-label="New database")
 			br
 			div(ng-switch="vm.changeHelpToShow")
 				p(ng-switch-when="98")
-					| Please go to the
-					=" "
-					a(href="", ng-click="vm.goToPage('contact')") Contact Page
-					=" "
-					| to request this change.
+					| Please delete projects to reduce quota.
