--- a/frontend/billing/jade/billing.jade
+++ b/frontend/billing/jade/billing.jade
@@ -11,7 +11,7 @@ md-content(layout="row", layout-align="center", layout-margin, ng-if="vm.showBil
 		md-input-container(flex)
 			label Date
 			input(type="text", value="{{vm.billing.createdAt | date:'dd-MM-yyyy'}}", ng-disabled="true")
-		md-input-container(flex)
+		//md-input-container(flex)
 			label Id
 			input(type="text", value="{{vm.billing.billingAgreementId}}", ng-disabled="true")
 		md-input-container(flex)
