--- a/frontend/account/jade/accountProfile.jade
+++ b/frontend/account/jade/accountProfile.jade
@@ -7,10 +7,11 @@
 
 		.userContent
 			div(layout="column", flex)
-				h1.md-title Info
-				md-input-container.md-block
-					label Username
-					input(ng-model="vm.username" ng-disabled="true")
+				//h1.md-title Info
+				div(layout="row", flex)
+					md-input-container(flex="50")
+						label Username
+						input(ng-model="vm.username" ng-disabled="true")
 				div(layout="row")
 					md-input-container(flex)
 						label First name
@@ -18,9 +19,10 @@
 					md-input-container(flex)
 						label Last name
 						input(ng-model="vm.lastNameNew")
-				md-input-container.md-block
-					label Email
-					input(ng-model="vm.emailNew", type="email")
+				div(layout="row", flex)
+					md-input-container(flex="50")
+						label Email
+						input(ng-model="vm.emailNew", type="email")
 				.updateContainer(layout="row", layout-align="start center")
 					md-button.md-raised.md-accent(ng-click="vm.updateInfo()") Update
 					p {{vm.infoSaveInfo}}
@@ -28,12 +30,12 @@
 			md-divider
 
 			div(layout="column")
-				h1.md-title Password
-				div(layout="row")
-					md-input-container(flex)
+				//h1.md-title Password
+				div(layout="row", flex)
+					md-input-container(flex="50")
 						label Old password
 						input(ng-model="vm.oldPassword", type="password")
-					md-input-container(flex)
+					md-input-container(flex="50")
 						label New password
 						input(ng-model="vm.newPassword", type="password")
 				.updateContainer(layout="row", layout-align="start center")
