--- a/frontend/account/jade/paypalDialog.jade
+++ b/frontend/account/jade/paypalDialog.jade
@@ -3,6 +3,8 @@ md-dialog#paypalDialog(aria-label="New database")
 		.md-toolbar-tools
 			h2 Subscription
 			span(flex)
+			md-button.md-icon-button(ng-click="vm.closeDialog()", ng-if="vm.closeDialogEnabled")
+				md-icon.angular-material-icons(aria-label="Close dialog") close
 	.userContent
 		.cardInfo
 			p {{vm.payPalInfo}}
