--- a/frontend/pricing/jade/pricing.jade
+++ b/frontend/pricing/jade/pricing.jade
@@ -12,6 +12,9 @@
 			.pricingInfo(layout="column", layout-align="start")
 				.pricingInfoLine(layout="column", layout-align="start center")
 					md-icon.angular-material-icons stars
+					h3 200 MB Server Space
+				.pricingInfoLine(layout="column", layout-align="start center")
+					md-icon.angular-material-icons stars
 					h3 Demo Project
 			md-divider
 			div(layout="row", layout-align="center center")
