--- a/frontend/account/jade/accountBilling.jade
+++ b/frontend/account/jade/accountBilling.jade
@@ -75,20 +75,23 @@
 					section
 						md-subheader
 							div(layout="row", layout-align="start")
-								label(flex="20") Date
-								//label(flex="25") Id
-								label(flex="25") Payment Method
-								label(flex="20") Amount (£)
+								label(flex="20") ID
+								label(flex="15") Date
+								label(flex="20") Description
+								label(flex="20") Payment Method
+								label(flex="15") Amount (£)
 
 					div
 						.accountBillingHistoryListItem(layout="row", layout-align="start start", ng-repeat="billing in vm.billings")
 							md-input-container(flex="20")
-								input(type="text", value="{{billing.createdAt | date:'dd-MM-yyyy'}}", ng-disabled="true", aria-label="date")
-							//md-input-container(flex="25")
 								input(type="text", value="{{billing.billingAgreementId}}", ng-disabled="true", aria-label="id")
-							md-input-container(flex="25")
-								input(type="text", value="{{billing.gateway}}", ng-disabled="true", aria-label="paymentMethod")
+							md-input-container(flex="15")
+								input(type="text", value="{{billing.createdAt | date:'dd-MM-yyyy'}}", ng-disabled="true", aria-label="date")
 							md-input-container(flex="20")
+								input(type="text", value="{{billing.items[0].name}}", ng-disabled="true", aria-label="description")
+							md-input-container(flex="20")
+								input(type="text", value="{{billing.gateway}}", ng-disabled="true", aria-label="paymentMethod")
+							md-input-container(flex="15")
 								input(type="text", value="{{billing.amount}}", ng-disabled="true", aria-label="amount")
 							md-button.md-icon-button.md-accent(aria-label="Download", ng-click="vm.downloadBilling($index)", flex="none")
 								md-icon.angular-material-icons cloud_download
