--- a/frontend/billing/css/billing.css
+++ b/frontend/billing/css/billing.css
@@ -4,6 +4,12 @@ billing {
     height: 100%;
     background: rgb(250, 250, 250);
     z-index: 2;
+    color: rgba(0, 0, 0, 0.8);
+}
+
+billing p,
+billing label {
+    color: rgba(0, 0, 0, 0.7);
 }
 
 billing .md-toolbar-tools img {
@@ -24,4 +30,14 @@ billing #billingClientAddress {
 
 billing .billingInfoTitle {
     font-weight: bold;
+}
+
+billing #billingProductInfo {
+    margin: 10px 0 40px;
+}
+
+billing #billingReverseCharge {
+    margin-top: 40px;
+    font-size: 14px;
+    line-height: 30px;
 }
